v2.1.16 (21/09/2017)
- moved code around
- added cache (experiment)

v2.1.15 (17/09/2017)
- Speed up main menu

v2.1.14 (10/09/2017)
- speed up TagBlacklisting

v2.1.13 (05/09/2017)
- new way we handle video play
- improve debug loading
- speed up some subfolders
- better default title
- handle syncing resume better
- support more shoko 3.8.x.x changes

v2.1.12 (12/06/2017)
- fix for multifile for episode throw error on cancel (#212) fix

v2.1.11 (12/06/2017)
- Use toggle watched if no sync
- multifile for episode throw error on cancel (#212)

v2.1.10 (25/05/2017)
- Added Progress bar with time consuming tasks
- Make progress messages more user friendly

v2.1.9 (17/05/2017)
- Clamp watched to never be greater than total
- Make TAG shorter so it wont overlap plot #211

v2.1.8 (07/05/2017)
- possible problem with external player (#206)
- Series in groups are not marked as watched (#207)
- Resume not working correctly. (#208)
- Nancy 1.x doesn't support asynchronous requests (#204)
- 'air' wasn't populate properly (linux)

v2.1.7 (02/04/2017)
- play after resume wouldn't work correctly (tested on kodi 17.1)

v2.1.6 (01/04/2017)
- vote after watching - stopped working (#203)
- proper 'resume' support which will work correct with shoko 3.6.0.7 (not ETA)
- more PEP8
- added few missing docstrings
- removed hack for partial mark series (as some skins may use % and hack would force 0,50,100%)

v2.1.5 (31/03/2017)
- Series/episodes not shown in list (#202)
- Fix searches with spaces
- PEP8

v2.1.4 (20/03/2017)
- Fix search getting stuck in loop if canceled

v2.1.3 (07/03/2017)
- Removed minimal Kodi version (xmbc.python)

v2.1.2 (07/03/2017)
- Added 'service' module to requirements for installing nakamori add-on

v2.1.1 (07/03/2017)
- Move player to service 
- Display a message when Scripts is not installed

v2.1.0 (05/03/2017)
- Nakamori not use purely a new Shoko API v2 Interface to communicate
- Shoko Server should be 3.7.0.4 or higher