@@ -13,7 +13,8 @@
 <news>
 v2.1.16 (21/09/2017)
 - moved code around
-- added cache (experiment)
+- added cache (experiment) #219
+- fixed opening smb files
 </news>
 <platform>all</platform>
 <language>en</language>
