@@ -1,6 +1,7 @@
 v2.1.16 (21/09/2017)
 - moved code around
-- added cache (experiment)
+- added cache (experiment) #219
+- fixed opening smb files
 
 v2.1.15 (17/09/2017)
 - Speed up main menu
